<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="your RMIT email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tEH-Nv-ubD" customClass="UnderlinedTextField" customModule="SchoolOfScience
                                <rect key="frame" x="89" y="192" width="240" height="30"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rse-Ic-6ny" customClass="UnderlinedTextField" customModule="SchoolOfScience" 
                                <rect key="frame" x="88" y="352" width="240" height="30"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJI-5g-YOH" customClass="UnderlinedTextField" customModule="SchoolOfScience" cust
                                <rect key="frame" x="88" y="272" width="240" height="30"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="snH-7o-LrE" customClass="UnderlinedTextField" customModule="SchoolOfS
                                <rect key="frame" x="89" y="432" width="240" height="30"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                            <constraint firstAttribute="width" constant="114" id="Abi-kt-7GP"/>
                                        </constraints>
                                        <state key="normal" title="General">
                                            <color key="titleColor" red="0.93483853340148926" green="0.19727994184400161" blue="0.14472539388146957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="115" y="0.0" width="113" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <state key="normal" title="Research">
                                            <color key="titleColor" red="0.93483853340148926" green="0.19529619812965393" blue="0.14242559671401978" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                            <constraint firstAttribute="width" constant="114" id="Byj-8S-biC"/>
                                        </constraints>
                                        <state key="normal" title="Learning">
                                            <color key="titleColor" red="0.93483853340148926" green="0.19727994184400161" blue="0.14472539388146957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aq1-PL-57n">
                                <rect key="frame" x="59" y="88" width="80" height="24"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Send Email">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Change Password">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
